Implement displaying of version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-filtered.property=@my.filtered.property@
 spring.version=@spring.version@
+version=@version@
+filtered.property=@my.filtered.property@
