--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.version=@spring.version@
-version=@version@
-filtered.property=@my.filtered.property@
+custom.spring.version=@spring.version@
+custom.version=@version@
+custom.filtered.property=@my.filtered.property@
