--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-custom.spring.version=@spring.version@
-custom.version=@version@
-custom.filtered.property=@my.filtered.property@
+pom.spring.version=@spring.version@
+project.version=@version@
+filter.filtered.property=@my.filtered.property@
