Implement displaying od basedir

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 pom.spring.version=@spring.version@
 project.version=@version@
+basedir=valueOfBasedir
 filter.filtered.property=@my.filtered.property@
